<resources>
    <string name="app_name">Birthdays</string>
    <string name="action_settings">Settings</string>
    <string name="action_birthdays">Birthdays</string>
    <string name="Birthdays">Birthdays</string>
    <string name="wiki_person_info">Information from Wikipedia</string>
    <string name="title_activity_central">Central</string>
    <string name="action_central">Central</string>
    <string name="action_rockstar">Rockstar</string>
    <string name="star_list">Stars</string>
</resources>
