<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ua.biz.myshop.birthdays.MainActivity">
    <item
        android:id="@+id/action_birthdays"
        android:orderInCategory="100"
        android:title="@string/action_birthdays"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rockstar"
        android:orderInCategory="100"
        android:title="@string/action_rockstar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_central"
        android:orderInCategory="100"
        android:title="@string/action_central"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stars"
        android:orderInCategory="100"
        android:title="@string/star_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
